# work-day

./: .gitignore  README.md  pyproject.toml  pyproject.toml_man  requirements_test.txt
resources/: config.ini  workday_settings.yml  workday_table.asciidoc.j2
src/work_day/: main.py  test.py  work_day.py  work_log_handler.py  worklog_bak.json
src/work_day/log/: worklog.json
tests/: test_unittest.py
